# AgroMap-Uzbekistan

./: .env.example  .env.production  .flake8  .gitignore  README.md  app.db  config.py  deploy.py  deployment.md  optimize.py  pyproject.toml  requirements.txt  run.py  run_tests.py  setup.cfg  setup_db.py  simple_test.py  test_working.py
.github/workflows/: ci.yml
app/: __init__.py  __init__.py.backup  __init__.py.new  auth.py  cache.py  email.py  error_tracking.py  forms.py  logging.py  models.py  routes.py  security.py  translations.py  utils.py
app/config/: assets.py
app/services/: analytics_service.py  crop_advisor.py  crop_rotation_planner.py  market_analyzer.py  weather_service.py  yield_predictor.py
app/static/: manifest.json  sw.js
app/templates/: analytics.html  base.html  critical.css  crops.html  dashboard.html  fields.html  index.html  login.html  map.html  offline.html  predictions.html  profile.html  reports.html  (+7 more)
docs/: 40-Word Description.txt  AgroMap Uzbekistan is a web app tha.txt  Based on your AgroMap Uzbekistan pr.txt  Description (40 words).txt  admin_guide.md  api_docs.md  architecture_docs.md  crop_reports_guide.md  deployment_guide.md  help_system.md  implementation_summary.md  improvments.md  jhtgdkutgcv.txt  maintenance_docs.md  plan.md  security.md  tasks.md  user_guide.md
tests/: conftest.py  locustfile.py  test_comprehensive.py  test_crop_advisor.py  test_features.py  test_load.py  test_monitoring.py  test_region_detection.py  test_runner.py  test_security.py  test_simple.py  test_weather.py  tests.py
translations/: messages.pot
(+43 files in other folders)
