[tool.black]
line-length = 88
skip-string-normalization = true
exclude = '''
/(\.|venv|env|__pycache__|build|dist)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agromap"
version = "0.1.0"
description = "AgroMap Uzbekistan"
requires-python = ">=3.8"
dependencies = []

[tool.coverage.run]
branch = true
source = ["app"]
